<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/grey_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parametersFragment_title"
                    android:fontFamily="sans-serif-black"
                    android:textSize="24sp"
                    android:layout_marginVertical="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parametersFragment_account"
                    android:textSize="16sp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/parametersFragment_name"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:padding="10dp"/>

                    <EditText
                        android:id="@+id/parametersFragment_editText"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/parametersFragment_avatar"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:padding="10dp"/>

                    <Button
                        android:id="@+id/parametersFragment_takePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/parametersFragment_takePhoto"
                        android:layout_alignParentEnd="true" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        android:layout_marginHorizontal="30dp" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/parametersFragment_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            android:background="@drawable/green_gradient_button"
            android:layout_gravity="center|bottom"
            android:text="@string/parametersFragment_save" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
